# claude-fishing

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  README.md  TODO-COMPLETED.md  TODO.md  flake.nix
.claude/: bash  bash-commands.json  fishing.bash.txt  fishing.glob-exclude.txt  fishing.paths.txt  fishing.txt  fishing.webfetch.txt  hook-restrict-bash-commands.py  hook-restrict-read-grep-glob-paths.py  hook-restrict-reads-forbidden-by-globs.py  hook-restrict-webfetch-urls.py  hook-restrict-write-edit.py  ls.sh  paths  settings copy.json  settings.json  webfetch  webfetch-urls.json
fishing-mcp/: Cargo.toml
fishing-mcp/src/: main.rs
src/: defaults.rs  hook_input.rs  lib.rs  main.rs  util.rs
src/fishing/: main.rs
src/grep-glob/: main.rs
src/hooks/: bash.rs  config.rs  env.rs  glob_exclude.rs  init.rs  mod.rs  paths.rs  rotate_log.rs  settings.rs  webfetch.rs  write.rs
