[package]
name = "claude-fishing"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "fishing"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonschema = "0.29"
reqwest = { version = "0.12", features = ["blocking"] }
regex = "1"
globset = "0.4"
wildcard = "0.3"
