[package]
name = "claude-fishing"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "fishing"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
jsonschema = "0.29.1"
reqwest = { version = "0.12.28", features = ["blocking", "rustls-tls"] }
regex = "1.12.4"
globset = "0.4.18"
wildcard = "0.3.0"
