[package]
name = "claude-fishing"
version = "0.1.0"
edition = "2024"

[lib]
name = "claude_fishing"
path = "src/lib.rs"

[[bin]]
name = "fishing"
path = "src/fishing/main.rs"

[[bin]]
name = "grep-glob-mcp"
path = "src/grep-glob/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
jsonschema = "0.46.6"
rootcause = "0.13.0"
reqwest = { version = "0.13.4", features = ["blocking"] }
regex = "1.12.4"
globset = "0.4.18"
wildcard = "0.3.0"
chrono = "0.4.45"
strum   = "0.28.0"
strum_macros = "0.28.0"

tokio = { version = "1.52.3", features = [ "fs", "macros", "rt-multi-thread" ] }

[dev-dependencies]
tempfile = "3"
rmcp = { version = "2.0.0", features = ["transport-io"] }
rmcp-macros = "2.0.0"
schemars = "1.2.1"
walkdir = "2.5.0"