[package]
name = "fishing-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
jsonschema = "0.46.6"
rootcause = "0.13.0"
regex = "1.12.4"
globset = "0.4.18"
wildcard = "0.3.0"
chrono = "0.4.45"
strum   = "0.28.0"
strum_macros = "0.28.0"
tokio   = "1.52.3"
rmcp = "2.0.0"
rmcp-macros = "2.0.0"